--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ Django==3.2.2
 django-heroku==0.3.1
 gunicorn==20.1.0
 idna==2.10
+numerize==0.12
 psycopg2==2.8.6
 python-decouple==3.4
 pytz==2021.1
